plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.birlax'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
    implementation 'org.springframework.boot:spring-boot-starter:3.2.1'

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.1'


    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation 'org.slf4j:slf4j-api:1.7.25'

    implementation project(':databaseCommon')
    implementation project(':nseTrading')

}

allprojects {

    apply plugin: 'java'

    dependencies {

        compileOnly 'org.projectlombok:lombok:1.18.30'

        implementation 'com.google.guava:guava:32.1.3-jre'
        implementation 'org.apache.commons:commons-lang3:3.14.0'
        implementation 'org.slf4j:slf4j-api:2.0.10'
        implementation 'org.slf4j:slf4j-simple:2.0.10'

        // For @Named, Inject , PostConstruct annotation
        implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
        implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'


    }

}
